CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

set(PRJ_NAME simple_async_server)
PROJECT(${PRJ_NAME})


# include directories
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
)

# lib directories
LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/lib
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)